--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
     <quarkus.platform.version>2.8.2.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+    <jkube.build.strategy>s2i</jkube.build.strategy>
+    <jkube.generator.name>quay.io/gboue/antenna</jkube.generator.name>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -119,6 +121,11 @@
       </activation>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.eclipse.jkube</groupId>
+            <artifactId>kubernetes-maven-plugin</artifactId>
+            <version>1.7.0</version>
+          </plugin>
           <plugin>
             <artifactId>maven-failsafe-plugin</artifactId>
             <version>${surefire-plugin.version}</version>
